docs/24.04/schedule.md
(noble-numbat-schedule)=
# Ubuntu Noble Numbat Release Schedule

<!-- migrated from https://discourse.ubuntu.com/t/noble-numbat-release-schedule/35649 -->

Week | Date (Thursday) | 24.04 events
--- | --- | ---
**October 2023** |
1 | October 26 | Toolchain Uploaded
**November 2023** |
2 | November 02 | 
3 | November 09 | 
4 | November 16 | 
5 | November 23 | 
6 | November 30 | 
**December 2023** |
7 | December 07 | 
8 | December 14 | 
9 | December 21 |
10 | December 28 | Ubuntu Testing Week (optional)
**January 2024** |
11 | January 04 | 
12 | January 11 | 
13 | January 18 | 
14 | January 25 | 
**February 2024** |
15 | February 01 | 
16 | February 08 | 
17 | February 15 | 
18 | February 22 | *22.04.4*
19 | February 29 | [Feature Freeze](https://ubuntu.com/project/docs/release-team/freezes/#feature-freeze), Debian Import Freeze
**March 2024** |
20 | March 07 | Ubuntu Testing Week (optional)
21 | March 14 | 
22 | March 21 | [User Interface Freeze](https://ubuntu.com/project/docs/release-team/freezes/#user-interface-freeze)
23 | March 28 | [Documentation String Freeze](https://ubuntu.com/project/docs/release-team/freezes/#documentation-string-freeze), [Kernel Feature Freeze](https://ubuntu.com/project/docs/release-team/freezes/#kernel-feature-freeze)
**April 2024** |
24 | April 01 (Monday) | [Hardware Enablement Freeze](https://ubuntu.com/project/docs/release-team/freezes/#hardware-enablement-freeze)
⠀ | April 04 |  
25 | April 08 | [Beta Freeze](https://ubuntu.com/project/docs/release-team/freezes/#beta-freeze)
⠀ | April 11 | Beta (mandatory, delayed), [Kernel Freeze](https://ubuntu.com/project/docs/release-team/freezes/#kernel-freeze), [Non Language Pack Translation Deadline](https://ubuntu.com/project/docs/release-team/freezes/#non-language-pack-translation-deadline)
26 | April 18 | [Final Freeze](https://ubuntu.com/project/docs/release-team/freezes/#final-freeze), [Release Candidate](https://ubuntu.com/project/docs/release-team/freezes/#release-candidate), [Language Pack Translation Deadline](https://ubuntu.com/project/docs/release-team/freezes/#language-pack-translation-deadline)
27 | April 25 | [Final Release](https://ubuntu.com/project/docs/release-team/release-cycle/#final-release)
... | ... | 
**August 2024** |
41 | August 01 | 
42 | August 08 | 
43 | August 15 | 
44 | August 22 | 
45 | August 29 | [24.04.1 Point Release ](https://ubuntu.com/project/docs/release-team/ubuntu-releases/#point-releases)
... | ... | 
**February 2025** |
68 | February 06 |
69 | February 13 | [24.04.2 Point Release ](https://ubuntu.com/project/docs/release-team/ubuntu-releases/#point-releases)
70 | February 20 |
71 | February 27 |
|... |  | |
|**August 2025** |  | |
|94 | August 07 | [24.04.3 Point Release ](https://ubuntu.com/project/docs/release-team/ubuntu-releases/#point-releases)|
|95 | August 14 | |
|96 | August 21 | |
|97 | August 28 | |
|... | ||
|**February 2026**| ||
|121 | February 12 | [24.04.4 Point Release ](https://ubuntu.com/project/docs/release-team/ubuntu-releases/#point-releases)|
|... | ||
|**September 2026**| ||
|151 | September 10 | [24.04.5 Point Release ](https://ubuntu.com/project/docs/release-team/ubuntu-releases/#point-releases)|
|... | ||

## Planned and potentially disruptive archive-wide activities

If you're planning a change that might have a disruptive effect on the archive - e.g. transitions or switches of important defaults (such as compiler versions) - list it here.

Week | Date (Thursday) | Planned activity
--- | --- | ---
**October 2023** |
1 | October 26 | 
**November 2023** |
2 | November 02 |  Python 3.12 as supported Python3 version
3 | November 09 | 
4 | November 16 | 
5 | November 23 | 
6 | November 30 | 
**December 2023** |
7 | December 07 | 
8 | December 14 | 
9 | December 21 |  binutils 2.42
10 | December 28 | 
**January 2024** |
11 | January 04 |  ruby 3.2
12 | January 11 | 
13 | January 18 | PHP 8.3 transition
14 | January 25 |  Python 3.12 as default version
**February 2024** |
15 | February 01 |  glibc 2.39 in -proposed, glib 2.79 in proposed
16 | February 08 | 
17 | February 15 |  [GNOME 46 Beta](https://wiki.gnome.org/FortySix)
18 | February 22 |  64-bit time_t (est) / Go 1.22 as default / GCC 14 as non-default/Java 21 as default
19 | February 29 | 
**March 2024** |
20 | March 07 | 
21 | March 14 | 
22 | March 21 |  [GNOME 46.0](https://wiki.gnome.org/FortySix)
23 | March 28 | LLVM 18 as default
**April 2024** |
24 | April 04 | 
25 | April 11 | 
26 | April 18 | 
27 | April 25 | 

## Ubuntu Noble Numbat Release Task Signup Sheet

This signup sheet is to be used for planning release milestone tasks.

The Alpha and Beta 1 milestones have been replaced with [Testing Weeks](https://lists.ubuntu.com/archives/ubuntu-release/2018-April/004434.html), which are organized ad hoc at this point.

| Milestone         |     Date        | Image (Nusakan) Engineering | Checklist Tracking | Announcement Email |
| ----------------- | --------------- | --------------------------- | ------------------ | ------------------ |
| Feature Freeze    |                 | n/a                         | n/a                | utkarsh |
| UI Freeze         |                 | n/a                         | n/a                | utkarsh |
| Doc String Freeze |                 | n/a                         | n/a                | utkarsh |
| 24.04 Beta        |                 | utkarsh |                    |                    |
| Final Freeze      |                 |                             |                    |                    |
| 24.04 Release     | April 25 2024 | utkarsh | utkarsh | utkarsh |

When the archive is frozen, all members of the release team are expected to participate in bug fix reviews.

After [Feature Freeze](https://ubuntu.com/project/docs/release-team/freezes/#feature-freeze), all members of the release team are expected to participate in Feature Freeze Exception reviews in their particular area of expertise.

After [Final Beta](https://ubuntu.com/project/docs/release-team/release-cycle/#finalization), all members of the release team are expected to participate in Bug fix reviews in their particular area of expertise.
